migrated activator template from lightbend to Giter g8